traefik/pkg/provider/kubernetes/ingress/fixtures/Double-Single-Service-Ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  defaultBackend:
    service:
      name: service1
      port:
        number: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  defaultBackend:
    service:
      name: service2
      port:
        number: 80

---
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: testing

spec:
  ports:
    - port: 80
  clusterIP: 10.0.0.1

---
kind: Service
apiVersion: v1
metadata:
  name: service2
  namespace: testing

spec:
  ports:
    - port: 80
  clusterIP: 10.0.0.1

---
kind: EndpointSlice
apiVersion: discovery.k8s.io/v1
metadata:
  name: service1-abc
  namespace: testing
  labels:
    kubernetes.io/service-name: service1

addressType: IPv4
ports:
  - port: 8080
    name: ""
endpoints:
  - addresses:
      - 10.30.0.1
      - 10.41.0.1
    conditions:
      ready: true

---
kind: EndpointSlice
apiVersion: discovery.k8s.io/v1
metadata:
  name: service2-abc
  namespace: testing
  labels:
    kubernetes.io/service-name: service2

addressType: IPv4
ports:
  - port: 8080
    name: ""
endpoints:
  - addresses:
      - 10.10.0.1
      - 10.21.0.1
    conditions:
      ready: true
